charts/argo-cd/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-http-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
  - host: http.argocd.172.18.0.200.nip.io
  # - host: http.argocd.white-planet.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: argo-cd-argocd-server
            # name: argocd-server
            port:
              number: 80              
  tls:
  - hosts:
    - http.argocd.172.18.0.200.nip.io
    # - http.argocd.white-planet.local
    secretName: argocd-secret # do not change, this is provided by Argo CD

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-grpc-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
spec:
  rules:
  - host: grpc.argocd.172.18.0.200.nip.io
  # - host: grpc.argocd.white-planet.local
    http:
      paths:      
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: argo-cd-argocd-server
            # name: argocd-server
            port:
              number: 443
  tls:
  - hosts:
    - grpc.argocd.172.18.0.200.nip.io
    # - grpc.argocd.white-planet.local
    secretName: argocd-secret # do not change, this is provided by Argo CD
